# Robocapstone_CLEANUP-Localization

./: CMakeLists.txt  package.xml
nodes/: simple_sim.py
src/: fake_pose.cpp
